# visr-cpp-library-example

./: CMakeLists.txt  Readme.md
components/: CMakeLists.txt  compressor.cpp  compressor.hpp
config_files/: array1.cfg
doc/: CMakeLists.txt  Doxyfile.in  about.rst  building-the-code.rst  conclusions.rst  conf.py.in  creating-a-cpp-component.rst  creating-python-bindings.rst  creating-standalone-applications.rst  index.rst  motivation.rst  running-components-from-python.rst
doc/doxygen/: Doxyfile.in
python_examples/: test_compressor.py
python_test/: benchmark_coefficient_calculator.py  compare_coefficient_calculator.py  test_listener_position_decoder.py
pythonwrappers/: CMakeLists.txt  compressor.cpp  drcmodule.cpp
standalone/: CMakeLists.txt  main.cpp  options.cpp  options.hpp
